Ennable list type projection tests